// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sku Mutation createSku Should create sku 1`] = `
Object {
  "data": Object {
    "createSku": Object {
      "id": "d",
      "inventory": 10,
      "price": 10,
      "product": Object {
        "id": "d",
      },
      "sku": "111",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {
        "Cache-Control": Array [
          "max-age=5, public",
        ],
      },
    },
  },
}
`;

exports[`Sku Mutation createSku Should delete sku 1`] = `
Object {
  "data": Object {
    "deleteSku": Object {
      "message": "Sku removed",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {
        "Cache-Control": Array [
          "max-age=5, public",
        ],
      },
    },
  },
}
`;

exports[`Sku Mutation createSku Should update sku 1`] = `
Object {
  "data": Object {
    "updateSku": Object {
      "id": "e",
      "inventory": 5,
      "price": 4.12,
      "product": Object {
        "id": "d",
      },
      "sku": "S123",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {
        "Cache-Control": Array [
          "max-age=5, public",
        ],
      },
    },
  },
}
`;
